# zappy-esp

./: .gitignore  Cargo.toml  MQTT.md  build.rs  secrets.env.example
.cargo/: config.toml
.github/workflows/: rust_ci.yml
pcb/: zap.kicad_pcb  zap.kicad_prl  zap.kicad_pro  zap.kicad_sch
src/: main.rs  secrets_placeholder.rs  ws2812.rs
