[package]
name = "test-rust"
version = "0.1.0"
authors = ["Nicolas Boichat <nicolas@boichat.ch>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "test-rust"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"
[patch.crates-io]
esp-idf-sys = { path = "../esp-idf-sys" }
esp-idf-hal = { path = "../esp-idf-hal" }
esp-idf-svc = { path = "../esp-idf-svc" }
embuild = { path = "../embuild" }

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
smart-leds-trait = "0.3"
ws2812-esp32-rmt-driver = { git = "https://github.com/drinkcat/ws2812-esp32-rmt-driver", features = ["smart-leds-trait"] }

[build-dependencies]
embuild = "0.33"
